# unit-tests-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish.yml  tests.yml
notebooks/: 1_create_graph.ipynb  2_get_node_context.ipynb  3_unittests_llm_generator.ipynb  4_test_validation.ipynb  5_full_pipeline.ipynb  99_orchestrator.ipynb
src/raggraph/: parser.py  walker.py
src/test_generation_crew/: crew.py  llm_config.py
src/test_generation_crew/config/: agents.yaml
src/utgen/: constants.py  logger.py  main.py  orchestrator.py  pipeline.py  validation.py
src/utgen/config/: params.py
src/utgen/raggraph/: parser.py  utils.py  walker.py
src/utgen/test_generation_crew/: crew.py  guardrails.py  llm_config.py  schemas.py
src/utgen/test_generation_crew/config/: agents.yaml  tasks.yaml
tests/: conftest.py  test_generats_llm.py  test_normalize_signature.py  test_utgen___logger___disable_dependency_loggers.py  test_utgen___raggraph___parser___CodeGraphBuilder1___init__.py  test_utgen___raggraph___parser___CodeGraphBuilder2.__init__.py  test_utgen___raggraph___parser___CodeGraphBuilder2_attach_parents.py  test_utgen___raggraph___parser___CodeGraphBuilder2_is_local_symbol.py  test_utgen___raggraph___parser___CodeGraphBuilder2_visit_Call.py  test_utgen___raggraph___parser___CodeGraphBuilder2_visit_ClassDef.py  test_utgen___raggraph___parser___CodeGraphBuilder2_visit_Name.py  test_utgen___raggraph___utils___canonical_id.py  test_utgen___raggraph___utils___get_node_context.py  test_utgen___raggraph___utils___get_source_segment.py  test_utgen___raggraph___utils___normalize_signature.py  test_utgen___raggraph___walker___build_graph_from_directory.py  test_utgen___raggraph___walker___iter_python_files.py  test_utgen___test_generation_crew___crew___TestGenerationCrew___init__.py  test_utgen___test_generation_crew___crew___TestGenerationCrew_generate_unit_tests_task.py  test_utgen___test_generation_crew___guardrails___validate_tests_schema.py  test_utgen___validation___save_and_clean_tests.py  test_utgen___validation___validate_individual_test.py  test_utgen__logger__disable_dependency_loggers.py  test_utgen__raggraph__parser__CodeGraphBuilder2.attach_parents.py  test_utgen__validation__guardar_i_netejar_tests.py
tests/raggraph/: test_generats_llm.py  test_walker_iter_python_files.py
tests/unit_tests/: base_test_case.py  conftest.py
tests/unit_tests/src/raggraph/: test_utils_unparse.py  test_walker_iter_python_files.py
tests/utgen/: test_logger.py  test_main.py  test_pipeline.py  test_validation.py
tests/utgen/raggraph/: test_parser.py  test_utils.py  test_utils_1.py  test_utils_2.py  test_utils_3.py  test_utils_4.py  test_walker.py  test_walker_5.py  test_walker_6.py
tests/utgen/test_generation_crew/: test_crew.py  test_guardrails.py  test_llm_config.py
