[project]
name = "unit-tests-generator"
version = "0.1.0"
description = "Open source project to build a unit tests generator in Python."
readme = "README.md"
requires-python = "==3.13.12"
dependencies = [
    "crewai[google-genai]>=1.10.1",
    "litellm>=1.82.1",
    "networkx>=3.6.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
# Tooling — not required to run your app
dev = [
  "pre-commit>=3.7",
  "ruff>=0.5",
  "mypy>=1.8",
  "ipykernel>=7.2.0",
]
# Only for testing workflows
test = [
  "pytest>=8",
  "pytest-cov>=5",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Ruff configuration (https://docs.astral.sh/ruff/configuration/)
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# A solid default selection for apps:
# E/F: pycodestyle+pyflakes, B: bugbear, I: import sorting, UP: pyupgrade
select = ["E", "F", "B", "I", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
# Ruff formatter is Black-like by default; you can keep defaults or tweak.
quote-style = "double"

# Mypy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true  # This is pragmatic for apps early on; tighten later
files = ["src", "tests"]  # Run mypy on these folders (when invoked without explicit paths)
